# lazarus

./: .gitignore  Cargo.toml  README.md  amancapy  amancapy.pub  personal  personal.pub
src/: being_nn.rs  main.rs  main_with_prospect_rgb_fovs.rs  models.rs
src/models/: mha.rs  mhalstm.rs  mod.rs  sumfx.rs  sumfxlstm.rs
