[package]
name = "samsarsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { version = "0.13.2", features = ["ndarray",] }
ggez = "0.9.3"
image = "0.24.7"
rand = "0.8.5"
slotmap = "1.0.6"
splitmut = "0.2.1"

[profile.release]
debug = true
